--- a/src/main/resources/webserver/template/movie/user/movie/movieview.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movieview.html
@@ -67,6 +67,11 @@
     <div class="ui segment top attached">
         <div class="ui grid stackable">
             <div class="column four wide">
+                {% if newestMovies.contains(movie.getId().get()) %}
+                <a class="ui left corner label blue">
+                    <i class="star yellow icon"></i>
+                </a>
+                {% endif %}
                 <div class="ui segments basic">
                     <div class="ui segment center aligned">
                         {% if movie.getCoverFile() != null %}
