--- a/src/main/resources/webserver/template/automation/admin/switchserver/switchserverform.html
+++ b/src/main/resources/webserver/template/automation/admin/switchserver/switchserverform.html
@@ -47,7 +47,7 @@
             </div>
             <div class="field required">
                 <label>Timeout [ms]</label>
-                <input name="timeout" type="number" min="0" max="10000" step="1" value="{{ switchServer.getTimeout() | escape }}" required>
+                <input name="liveTimeout" type="number" min="0" max="10000" step="1" value="{{ switchServer.getTimeout() | escape }}" required>
             </div>
             <div class="ui segment">
                 <div class="field required">
