--- a/src/main/resources/webserver/template/movie/user/movie/movielist.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movielist.html
@@ -142,9 +142,12 @@
     {% endif %}
     {% endif %}
     {% if pagination.hasPages() %}
-    <div class="ui segment bottom clearing" style="margin-bottom: 30px;">
+    <div class="ui segment bottom clearing middle aligned" style="margin-bottom: 30px;">
         <div class="ui right floated pagination menu">
             {% include '/webserver/template/movie/user/pagination.html' with {pagination: pagination} %}
+        </div>
+        <div class="ui pagination menu" style="box-shadow: none; border: none;">
+            <div class="item">Seite {{ pagination.getCurrentPageLabel() }} von {{ pagination.getLastPageLabel() }}</div>
         </div>
     </div>
     {% endif %}
