--- a/src/main/resources/webserver/template/movie/user/search/searchall.html
+++ b/src/main/resources/webserver/template/movie/user/search/searchall.html
@@ -184,6 +184,9 @@
             <div class="ui right floated pagination menu">
                 {% include '/webserver/template/movie/user/pagination.html' with {pagination: personsPagination} %}
             </div>
+            <div class="ui pagination menu" style="box-shadow: none; border: none;">
+                <div class="item">Seite {{ pagination.getCurrentPageLabel() }} von {{ pagination.getLastPageLabel() }}</div>
+            </div>
         </div>
         {% endif %}
         {% else %}
