add knowledge app

--- a/src/main/resources/webserver/template/global/user/index.html
+++ b/src/main/resources/webserver/template/global/user/index.html
@@ -124,6 +124,14 @@
                     <div class="header">Netzwerk</div>
                 </div>
             </div>
+            <div class="card" onclick="window.location = '/knowledge/index'">
+                <div class="image">
+                    <img src="/static/img/icon/knowledge.png">
+                </div>
+                <div class="content">
+                    <div class="header">Wissen</div>
+                </div>
+            </div>
         </div>
     </div>
 </main>
