--- a/src/main/resources/webserver/template/sidebar.html
+++ b/src/main/resources/webserver/template/sidebar.html
@@ -32,5 +32,9 @@
             <img src="/static/img/icon/network.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Netzwerk
         </a>
+        <a href="/knowledge/index" class="item {% if module == 'knowledge' %}active{% endif %}">
+            <img src="/static/img/icon/knowledge.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Wissen
+        </a>
     </div>
 </aside>
