--- a/src/main/resources/webserver/template/automation/user/index.html
+++ b/src/main/resources/webserver/template/automation/user/index.html
@@ -220,14 +220,16 @@
         <div class="ui segment bottom attached">
             <div class="ui grid relaxed stackable doubling">
                 {% for element in activeRoom.getRoomElemenstSorted() %}
-                    {% if element.getType() == 'DIVIDER_ELEMENT' %}
-                        {% include '/webserver/template/automation/user/elements/divider.html' %}
-                    {% elseif element.getType() == 'BUTTON_ELEMENT' %}
-                        {% include '/webserver/template/automation/user/elements/button.html' %}
-                    {% elseif element.getType() == 'SENSOR_ELEMENT' %}
-                        {% include '/webserver/template/automation/user/elements/sensor.html' %}
-                    {% elseif element.getType() == 'VIRTUAL_SENSOR_ELEMENT' %}
-                        {% include '/webserver/template/automation/user/elements/virtualsensor.html' %}
+                    {% if element.isDisabled() == false %}
+                        {% if element.getType() == 'DIVIDER_ELEMENT' %}
+                            {% include '/webserver/template/automation/user/elements/divider.html' %}
+                        {% elseif element.getType() == 'BUTTON_ELEMENT' %}
+                            {% include '/webserver/template/automation/user/elements/button.html' %}
+                        {% elseif element.getType() == 'SENSOR_ELEMENT' %}
+                            {% include '/webserver/template/automation/user/elements/sensor.html' %}
+                        {% elseif element.getType() == 'VIRTUAL_SENSOR_ELEMENT' %}
+                            {% include '/webserver/template/automation/user/elements/virtualsensor.html' %}
+                        {% endif %}
                     {% endif %}
                 {% endfor %}
             </div>
