--- a/src/main/resources/webserver/template/global/admin/headline.html
+++ b/src/main/resources/webserver/template/global/admin/headline.html
@@ -9,27 +9,27 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/index" class="item">
-            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             SmartHome
         </a>
         <a href="/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
-            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             SmartHome Admin
         </a>
         <a href="/admin/message" class="item {% if module == 'message' %}active{% endif %}">
-            <img src="/static/img/icon/message.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/message.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Meldungen
         </a>
         <a href="/admin/backup" class="item {% if module == 'backup' %}active{% endif %}">
-            <img src="/static/img/icon/backup.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/backup.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Backup
         </a>
         <a href="/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
-            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Einstellungen
         </a>
         <a href="/admin/info" class="item {% if module == 'info' %}active{% endif %}">
-            <img src="/static/img/icon/info.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/info.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Info
         </a>
     </div>
