--- a/src/main/resources/webserver/template/movie/admin/headline.html
+++ b/src/main/resources/webserver/template/movie/admin/headline.html
@@ -9,39 +9,39 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/movie/index" class="item">
-            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Fimle
         </a>
         <a href="/movie/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
-            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Filme Admin
         </a>
         <a href="/movie/admin/person" class="item {% if module == 'person' %}active{% endif %}">
-            <img src="/static/img/icon/person.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/person.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Personen
         </a>
         <a href="/movie/admin/disc" class="item {% if module == 'disc' %}active{% endif %}">
-            <img src="/static/img/icon/disc.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/disc.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Medien
         </a>
         <a href="/movie/admin/fsk" class="item {% if module == 'fsk' %}active{% endif %}">
-            <img src="/static/img/icon/fsk.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/fsk.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Altersfreigaben
         </a>
         <a href="/movie/admin/genre" class="item {% if module == 'genre' %}active{% endif %}">
-            <img src="/static/img/icon/genre.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/genre.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Genre
         </a>
         <a href="/movie/admin/sortin" class="item {% if module == 'sortin' %}active{% endif %}">
-            <img src="/static/img/icon/sortin.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/sortin.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Sortieren
         </a>
         <a href="/movie/admin/statistic" class="item {% if module == 'statistic' %}active{% endif %}">
-            <img src="/static/img/icon/statistic.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/statistic.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Statistik
         </a>
         <a href="/movie/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
-            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Einstellungen
         </a>
     </div>
