--- a/src/main/resources/webserver/template/sidebar.html
+++ b/src/main/resources/webserver/template/sidebar.html
@@ -1,35 +1,35 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/index" class="item">
-            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/global.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             SmartHome
         </a>
         <a href="/automation/index" class="item  {% if module == 'automation' %}active{% endif %}">
-            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Automatisierung
         </a>
         <a href="/movie/index" class="item {% if module == 'movie' %}active{% endif %}">
-            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/movie.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Filme
         </a>
         <a href="/recipe/index" class="item {% if module == 'recipe' %}active{% endif %}">
-            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Rezepte
         </a>
         <a href="/shoppinglist/index" class="item {% if module == 'shoppinglist' %}active{% endif %}">
-            <img src="/static/img/icon/shoppinglist.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/shoppinglist.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Einkaufsliste
         </a>
         <a href="/contact/index" class="item {% if module == 'contact' %}active{% endif %}">
-            <img src="/static/img/icon/contact.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/contact.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Kontakte
         </a>
         <a href="/contract/index" class="item {% if module == 'contract' %}active{% endif %}">
-            <img src="/static/img/icon/contract.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/contract.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Vertr&auml;ge
         </a>
         <a href="/network/index" class="item {% if module == 'network' %}active{% endif %}">
-            <img src="/static/img/icon/network.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/network.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Netzwerk
         </a>
         <a href="/knowledge/index" class="item {% if module == 'knowledge' %}active{% endif %}">
