--- a/src/main/resources/webserver/template/automation/admin/headline.html
+++ b/src/main/resources/webserver/template/automation/admin/headline.html
@@ -9,35 +9,35 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/automation/index" class="item">
-            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Automatisierung
         </a>
         <a href="/automation/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
-            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/automation.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Automatisierung Admin
         </a>
         <a href="/automation/admin/device" class="item {% if module == 'device' %}active{% endif %}">
-            <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/device.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Ger&auml;te
         </a>
         <a href="/automation/admin/switchserver" class="item {% if module == 'switchserver' %}active{% endif %}">
-            <img src="/static/img/icon/switchserver.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/switchserver.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Schaltserver
         </a>
         <a href="/automation/admin/sensorvalues" class="item {% if module == 'sensorvalues' %}active{% endif %}">
-            <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/sensorvalues.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Sensorwerte
         </a>
         <a href="/automation/admin/room" class="item {% if module == 'room' %}active{% endif %}">
-            <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/room.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             R&auml;ume
         </a>
         <a href="/automation/admin/timer" class="item {% if module == 'timer' %}active{% endif %}">
-            <img src="/static/img/icon/timer.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/timer.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Timer
         </a>
         <a href="/automation/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
-            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Einstellungen
         </a>
     </div>
