--- a/src/main/resources/webserver/template/automation/admin/index.html
+++ b/src/main/resources/webserver/template/automation/admin/index.html
@@ -34,6 +34,14 @@
                     <div class="header">Sensorwerte</div>
                 </div>
             </div>
+            <div class="card" onclick="window.location = '/automation/admin/dash'">
+                <div class="image">
+                    <img src="/static/img/icon/dash.png">
+                </div>
+                <div class="content">
+                    <div class="header">Dashboards</div>
+                </div>
+            </div>
             <div class="card" onclick="window.location = '/automation/admin/room'">
                 <div class="image">
                     <img src="/static/img/icon/room.png">
