--- a/src/main/resources/webserver/template/recipe/admin/headline.html
+++ b/src/main/resources/webserver/template/recipe/admin/headline.html
@@ -9,23 +9,23 @@
 <aside>
     <div class="ui left vertical inverted sidebar labeled icon menu scale down">
         <a href="/recipe/index" class="item">
-            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Rezepte
         </a>
         <a href="/recipe/admin/index" class="item {% if module == 'admin' %}active{% endif %}">
-            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/recipe.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Rezepte Admin
         </a>
         <a href="/recipe/admin/ingredient" class="item {% if module == 'ingredient' %}active{% endif %}">
-            <img src="/static/img/icon/ingredient.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/ingredient.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Zutaten
         </a>
         <a href="/recipe/admin/tag" class="item {% if module == 'tag' %}active{% endif %}">
-            <img src="/static/img/icon/tag.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/tag.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Tags
         </a>
         <a href="/recipe/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
-            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto 8px auto;">
             Einstellungen
         </a>
     </div>
